2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Work around compiler bug.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* material.h: Add signedsqrt.

2001-11-23  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Virtualise n_eff.

2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Add S_flux.
	* camfr_wrap.cpp: Ditto.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Virtualise kz.
	* field.cpp: Ditto.
	* interface.cpp: Ditto.
	* stack.cpp: Ditto.
	* S_scheme.cpp: Ditto.
	* T_scheme.cpp: Ditto.
	* S_scheme_fields.cpp: Ditto.
	* T_scheme_fields.cpp: Ditto.
	* bloch.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	
2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * defs.h: Add support fow TE_TM polarisation.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	