@@ -1,5 +1,14 @@
 2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* expression.h: Add support for slab matrix cache.
+	* expression.cpp: Ditto.
+	* interface.cpp: Ditto.
+	* scatterer.h: Ditto.
+	* scatterer.cpp: Ditto.
+	* stack.cpp: Ditto.
+
+2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* camfr_wrap.cpp: Work around compiler bug.
 
 2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
